reposity de ronda modificado para novo modelo de funcionamento, reposity geral modiifcado
